<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.beachbox.beachbox.User.Activities.ActivityHome"
    android:background="@drawable/welcome_screen"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.4"
            android:weightSum="10"
            android:orientation="vertical">
            <com.beachbox.beachbox.widgets.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/colorAccent"
                android:text="@string/delivery"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tvDelivery"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.beachbox.beachbox.widgets.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/blue_background"
                android:text="@string/pickUp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tvPickUp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>
            <LinearLayout
                android:id="@+id/llAcountTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"/>
                <com.beachbox.beachbox.widgets.TextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/signin"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:gravity="center|right"
                    android:id="@+id/tv_signIn"/>
                <com.beachbox.beachbox.widgets.TextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="@string/or"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"/>
                <com.beachbox.beachbox.widgets.TextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/Create_an_account"
                    android:textSize="18sp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/blue"
                    android:gravity="center|left"
                    android:id="@+id/tv_createAnAccount"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
    </LinearLayout>
</LinearLayout>
