<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/backgroundGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:weightSum="10"
        android:orientation="horizontal"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>

        <com.beachbox.beachbox.widgets.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/myAccount"
            android:textSize="19sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="10"
        android:visibility="gone"
        android:layout_margin="15dp">

        <TextView android:layout_width="match_parent" android:layout_height="0dp"  android:layout_weight="3.5"  android:gravity="center" />
        <com.beachbox.beachbox.widgets.TextViewRegular android:layout_width="match_parent" android:layout_height="0dp"  android:layout_weight="1" android:text="@string/seeorderaccount"  android:gravity="center" />

        <com.beachbox.beachbox.widgets.TextViewBold
            android:id="@+id/tvLoginAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView android:layout_width="match_parent" android:layout_height="0dp"  android:layout_weight="4"  android:gravity="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoginSuccess"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.8"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.7"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_cover"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>

            <com.beachbox.beachbox.widgets.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:gravity="center"
                android:id="@+id/tv_fullName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.beachbox.beachbox.widgets.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:id="@+id/tv_email"
                    android:gravity="center"
                    android:textSize="15sp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"/>
                <com.beachbox.beachbox.widgets.TextViewLight
                    android:id="@+id/tvEditProfile"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:text="@string/Edit"
                 android:gravity="center_horizontal"
                 android:textColor="@color/blue"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <com.beachbox.beachbox.widgets.TextViewRegular
                        android:id="@+id/tvPayment"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8.04"
                        android:text="@string/payments"
                        android:textColor="@color/black_text_color"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"/>

                    <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.2" />

                    <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5" android:src="@drawable/fwd_arrow" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <com.beachbox.beachbox.widgets.TextViewRegular
                        android:id="@+id/tvHelp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/help"
                        android:textColor="@color/black_text_color"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"/>
                    <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.2" />

                    <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5" android:src="@drawable/fwd_arrow" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <com.beachbox.beachbox.widgets.TextViewRegular
                        android:layout_width="0dp"
                        android:id="@+id/tvLogout"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/logout"
                        android:textColor="@color/black_text_color"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"/>
                    <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.2" />

                    <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5" android:src="@drawable/fwd_arrow" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

    </LinearLayout>
</LinearLayout>