<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/backgroundGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:weightSum="10"
        android:orientation="horizontal"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <!--<LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:background="@drawable/btn_back"
                android:id="@+id/tv_back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"/>
        </LinearLayout>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/orders"
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.4"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/upcoming"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/tv_upcoming"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/history"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/tv_history"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.4"
            android:orientation="horizontal"
            android:weightSum="10">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:src="@drawable/icon_online"
                android:id="@+id/iv_upcoming"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:src="@drawable/icon_online"
                android:id="@+id/iv_history"
                android:visibility="gone"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5"
        android:id="@+id/lv_orders"
        android:divider="@null">

    </ListView>
</LinearLayout>